--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=terranews
-spring.datasource.username=root
+spring.datasource.username=postgres
 spring.datasource.password=password
-spring.datasource.url=jdbc:postgresql://localhost:5432/terrabase?currentSchema=public&TimeZone=Europe/Warsaw
+spring.datasource.url=jdbc:postgresql://localhost:5432/terrabase
 spring.jpa.hibernate.ddl-auto=update
