added roberta model

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=terranews
-spring.datasource.username=postgres
+spring.datasource.username=admin
 spring.datasource.password=password
 spring.datasource.url=jdbc:postgresql://localhost:5432/terrabase
 spring.jpa.hibernate.ddl-auto=update
